--- a/.gitignore
+++ b/.gitignore
@@ -136,13 +136,14 @@ celerybeat.pid
 
 # Environments
 .env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.env.*
+ .envrc
+ .venv
+ env/
+ venv/
+ ENV/
+ env.bak/
+ venv.bak/
 
 # Spyder project settings
 .spyderproject
